# vmf-to-stripper-cfg

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: rust.yml
src/: main.rs
